--- a/locales/ar/translation.json
+++ b/locales/ar/translation.json
@@ -11,5 +11,46 @@
   "seeResults": "شاهد النتائج",
   "previous": "السابق",
   "next": "التالي",
-  "skip": "تخطي"
+  "skip": "تخطي",
+  "pageTitle": "اختبار الميول الجنسية | هل أنا مثلي؟ اختبار اكتشاف الذات",
+  "pageDescription": "🌈 فهم هويتك يبدأ بالوعي. اختبار \"هل أنا مثلي؟\" هو خطوة أولى آمنة - بدون ضغط، مجرد تأمل.",
+  "quickGuide": "🟣 دليل سريع",
+  "exploreKey": "استكشف الأقسام الرئيسية في رحلة اكتشاف هويتك:",
+  "whyTake": "لماذا تأخذ هذا الاختبار؟",
+  "whatIsOrientation": "ما هو التوجه الجنسي؟",
+  "understandingSpectrum": "فهم طيف مجتمع الميم+",
+  "beforeBegin": "قبل أن تبدأ",
+  "howWorks": "كيف يعمل الاختبار",
+  "scoreBreakdown": "تحليل النتائج ومعناها",
+  "resultsMeaning": "ماذا تعني نتائجك",
+  "stillExploring": "ما زلت تستكشف؟ هذا طبيعي",
+  "commonQuestions": "الأسئلة الشائعة",
+  "helpfulResources": "موارد مفيدة",
+  "aboutDescription": "هذا التقييم السري المكون من 16 سؤالاً يساعدك في استكشاف ميولك الجنسية. استناداً إلى مبادئ علم النفس، يوفر إطاراً للتفكير في الانجذاب للجنس نفسه.",
+  "privacyDescription": "إجاباتك تبقى خاصة تماماً. نحن لا نخزن أي بيانات شخصية أو إجابات الاختبار.",
+  "selfDiscoveryDescription": "استخدم هذا الاختبار كنقطة انطلاق للتأمل الذاتي، وليس كتصنيف نهائي.",
+  "spectrumDescription": "افهم أن الجنسانية موجودة على طيف وقد تكون متغيرة مع مرور الوقت.",
+  "quizDuration": "مجاني، مجهول الهوية، ويستغرق 5 دقائق فقط",
+  "retakeQuiz": "إعادة الاختبار",
+  "returnHome": "العودة للرئيسية",
+  "yourResults": "نتائجك",
+  "score": "النتيجة",
+  "outOf": "من",
+  "points": "نقطة",
+  "understandingResults": "فهم نتيجتك",
+  "scoreExplanation": "نتيجتك تشير إلى موقعك على طيف التوجه الجنسي:",
+  "heterosexualRange": "0-12 نقطة: غالباً مغاير جنسياً",
+  "mixedRange": "13-24 نقطة: مغاير جنسياً في الغالب مع بعض الانجذاب للجنس نفسه",
+  "bisexualRange": "25-36 نقطة: نطاق ثنائي/متعدد الميول الجنسية",
+  "homosexualRange": "37-48 نقطة: غالباً مثلي الجنس",
+  "remember": "تذكر",
+  "rememberText": "هذا الاختبار هو مجرد نقطة بداية للتأمل الذاتي. التوجه الجنسي موجود على طيف، وقد يكون انجذاب الكثير من الناس متغيراً مع مرور الوقت. لا توجد نتيجة صحيحة أو خاطئة، وأنت وحدك من يمكنه تحديد هويتك حقاً.",
+  "resourcesTitle": "الموارد",
+  "resourcesDescription": "إذا كنت تبحث عن دعم أو مزيد من المعلومات حول التوجه الجنسي والهوية، هذه المنظمات يمكنها المساعدة:",
+  "trevorProject": "مشروع تريفور",
+  "trevorDescription": "التدخل في الأزمات ومنع الانتحار للشباب من مجتمع الميم+.",
+  "pflag": "PFLAG",
+  "pflagDescription": "دعم لأفراد مجتمع الميم+، عائلاتهم وحلفائهم.",
+  "glaad": "GLAAD",
+  "glaadDescription": "موارد وتعليم حول قضايا وتمثيل مجتمع الميم+."
 }
