--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -30,5 +30,27 @@
   "privacyDescription": "Deine Antworten bleiben komplett privat. Wir speichern keine persönlichen Daten oder Testantworten.",
   "selfDiscoveryDescription": "Nutze diesen Test als Ausgangspunkt für Selbstreflexion, nicht als endgültiges Label.",
   "spectrumDescription": "Verstehe, dass Sexualität auf einem Spektrum existiert und sich im Laufe der Zeit verändern kann.",
-  "quizDuration": "Kostenlos, anonym und dauert nur 5 Minuten"
+  "quizDuration": "Kostenlos, anonym und dauert nur 5 Minuten",
+  "retakeQuiz": "Test wiederholen",
+  "returnHome": "Zur Startseite",
+  "yourResults": "Deine Ergebnisse",
+  "score": "Punktzahl",
+  "outOf": "von",
+  "points": "Punkten",
+  "understandingResults": "Deine Punktzahl verstehen",
+  "scoreExplanation": "Deine Punktzahl zeigt, wo du auf dem Spektrum der sexuellen Orientierung liegst:",
+  "heterosexualRange": "0-12 Punkte: Überwiegend heterosexuell",
+  "mixedRange": "13-24 Punkte: Meist heterosexuell mit gleichgeschlechtlicher Anziehung",
+  "bisexualRange": "25-36 Punkte: Bisexueller/pansexueller Bereich",
+  "homosexualRange": "37-48 Punkte: Überwiegend homosexuell",
+  "remember": "Denk daran",
+  "rememberText": "Dieser Test ist nur ein Ausgangspunkt für Selbstreflexion. Sexuelle Orientierung existiert auf einem Spektrum, und die Anziehung vieler Menschen kann sich im Laufe der Zeit verändern. Es gibt keine richtigen oder falschen Ergebnisse, und nur du kannst deine Identität wirklich definieren.",
+  "resourcesTitle": "Ressourcen",
+  "resourcesDescription": "Wenn du Unterstützung oder mehr Informationen über sexuelle Orientierung und Identität suchst, können diese Organisationen helfen:",
+  "trevorProject": "The Trevor Project",
+  "trevorDescription": "Krisenintervention und Suizidprävention für LGBTQ-Jugendliche.",
+  "pflag": "PFLAG",
+  "pflagDescription": "Unterstützung für LGBTQ+-Menschen, ihre Familien und Verbündete.",
+  "glaad": "GLAAD",
+  "glaadDescription": "Ressourcen und Aufklärung über LGBTQ-Themen und Repräsentation."
 }
