--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -19,16 +19,38 @@
   "whyTake": "Why Take the Gay Test?",
   "whatIsOrientation": "What Is Sexual Orientation?",
   "understandingSpectrum": "Understanding the LGBTQIA+ Spectrum",
-  "beforeBegin": "Before You Begin the Am I Gay Quiz",
+  "beforeBegin": "Before You Begin",
   "howWorks": "How This Quiz Works",
   "scoreBreakdown": "Score Breakdown & Meaning",
-  "resultsMeaning": "What Your Gay Test Result Means",
-  "stillExploring": "Still Exploring? That's Okay.",
+  "resultsMeaning": "What Your Results Mean",
+  "stillExploring": "Still Exploring? That's Okay",
   "commonQuestions": "Common Questions",
   "helpfulResources": "Helpful Resources",
-  "aboutDescription": "This confidential 16-question assessment is designed to help you explore your sexual orientation. Based on psychological principles, it provides a framework for reflecting on same-sex attraction and where you might fall on the sexuality spectrum.",
+  "aboutDescription": "This confidential 16-question assessment helps you explore your sexual orientation. Based on psychological principles, it provides a framework for reflecting on same-sex attraction.",
   "privacyDescription": "Your answers stay completely private. We don't store any personal data or quiz responses.",
   "selfDiscoveryDescription": "Use this quiz as a starting point for personal reflection, not as a definitive label.",
   "spectrumDescription": "Understand that sexuality exists on a spectrum and may be fluid throughout your life.",
-  "quizDuration": "Free, anonymous, and takes about 5 minutes"
+  "quizDuration": "Free, anonymous, and takes about 5 minutes",
+  "retakeQuiz": "Take the Quiz Again",
+  "returnHome": "Return Home",
+  "yourResults": "Your Results",
+  "score": "Score",
+  "outOf": "out of",
+  "points": "points",
+  "understandingResults": "Understanding Your Score",
+  "scoreExplanation": "Your score indicates where you fall on the sexual orientation spectrum:",
+  "heterosexualRange": "0-12 points: Predominantly heterosexual",
+  "mixedRange": "13-24 points: Mostly heterosexual with some same-sex attraction",
+  "bisexualRange": "25-36 points: Bisexual/pansexual range",
+  "homosexualRange": "37-48 points: Predominantly homosexual",
+  "remember": "Remember",
+  "rememberText": "This quiz is just a starting point for self-reflection. Sexual orientation exists on a spectrum, and many people's attractions can be fluid over time. There's no right or wrong result, and only you can truly define your identity.",
+  "resourcesTitle": "Resources",
+  "resourcesDescription": "If you're looking for support or more information about sexual orientation and identity, these organizations can help:",
+  "trevorProject": "The Trevor Project",
+  "trevorDescription": "Crisis intervention and suicide prevention for LGBTQ young people.",
+  "pflag": "PFLAG",
+  "pflagDescription": "Support for LGBTQ+ people, their families, and allies.",
+  "glaad": "GLAAD",
+  "glaadDescription": "Resources and education about LGBTQ issues and representation."
 }
