--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -26,9 +26,31 @@
   "stillExploring": "¿Aún explorando? Está bien",
   "commonQuestions": "Preguntas comunes",
   "helpfulResources": "Recursos útiles",
-  "aboutDescription": "Esta evaluación confidencial de 16 preguntas está diseñada para ayudarte a explorar tu orientación sexual. Basada en principios psicológicos, proporciona un marco para reflexionar sobre la atracción hacia el mismo sexo.",
+  "aboutDescription": "Esta evaluación confidencial de 16 preguntas te ayuda a explorar tu orientación sexual. Basada en principios psicológicos, proporciona un marco para reflexionar sobre la atracción hacia el mismo sexo.",
   "privacyDescription": "Tus respuestas permanecen completamente privadas. No almacenamos ningún dato personal ni respuestas del test.",
   "selfDiscoveryDescription": "Usa este test como punto de partida para la reflexión personal, no como una etiqueta definitiva.",
   "spectrumDescription": "Comprende que la sexualidad existe en un espectro y puede ser fluida a lo largo del tiempo.",
-  "quizDuration": "Gratis, anónimo y toma solo 5 minutos"
+  "quizDuration": "Gratis, anónimo y toma solo 5 minutos",
+  "retakeQuiz": "Volver a hacer el test",
+  "returnHome": "Volver al inicio",
+  "yourResults": "Tus resultados",
+  "score": "Puntuación",
+  "outOf": "de",
+  "points": "puntos",
+  "understandingResults": "Entendiendo tu puntuación",
+  "scoreExplanation": "Tu puntuación indica dónde te encuentras en el espectro de orientación sexual:",
+  "heterosexualRange": "0-12 puntos: Predominantemente heterosexual",
+  "mixedRange": "13-24 puntos: Mayormente heterosexual con alguna atracción hacia el mismo sexo",
+  "bisexualRange": "25-36 puntos: Rango bisexual/pansexual",
+  "homosexualRange": "37-48 puntos: Predominantemente homosexual",
+  "remember": "Recuerda",
+  "rememberText": "Este test es solo un punto de partida para la autorreflexión. La orientación sexual existe en un espectro, y las atracciones de muchas personas pueden ser fluidas con el tiempo. No hay resultados correctos o incorrectos, y solo tú puedes definir verdaderamente tu identidad.",
+  "resourcesTitle": "Recursos",
+  "resourcesDescription": "Si buscas apoyo o más información sobre orientación sexual e identidad, estas organizaciones pueden ayudar:",
+  "trevorProject": "The Trevor Project",
+  "trevorDescription": "Intervención en crisis y prevención del suicidio para jóvenes LGBTQ.",
+  "pflag": "PFLAG",
+  "pflagDescription": "Apoyo para personas LGBTQ+, sus familias y aliados.",
+  "glaad": "GLAAD",
+  "glaadDescription": "Recursos y educación sobre temas y representación LGBTQ."
 }
