--- a/locales/fi/translation.json
+++ b/locales/fi/translation.json
@@ -26,9 +26,31 @@
   "stillExploring": "Vielä tutkimassa? Se on ok",
   "commonQuestions": "Yleiset kysymykset",
   "helpfulResources": "Hyödyllisiä resursseja",
-  "aboutDescription": "Tämä luottamuksellinen 16 kysymyksen arviointi on suunniteltu auttamaan sinua tutkimaan seksuaalista suuntautumistasi. Psykologisiin periaatteisiin perustuen se tarjoaa kehyksen pohtia samaan sukupuoleen kohdistuvaa vetovoimaa.",
+  "aboutDescription": "Tämä luottamuksellinen 16 kysymyksen arviointi auttaa sinua tutkimaan seksuaalista suuntautumistasi. Psykologisiin periaatteisiin perustuen se tarjoaa kehyksen pohtia samaan sukupuoleen kohdistuvaa vetovoimaa.",
   "privacyDescription": "Vastauksesi pysyvät täysin yksityisinä. Emme tallenna henkilökohtaisia tietoja tai testivastauksia.",
   "selfDiscoveryDescription": "Käytä tätä testiä lähtökohtana itsereflektiolle, ei lopullisena leimana.",
   "spectrumDescription": "Ymmärrä, että seksuaalisuus on spektri ja voi olla muuttuva ajan myötä.",
-  "quizDuration": "Ilmainen, anonyymi ja kestää vain 5 minuuttia"
+  "quizDuration": "Ilmainen, anonyymi ja kestää vain 5 minuuttia",
+  "retakeQuiz": "Tee testi uudelleen",
+  "returnHome": "Palaa etusivulle",
+  "yourResults": "Tuloksesi",
+  "score": "Pisteet",
+  "outOf": "/",
+  "points": "pistettä",
+  "understandingResults": "Pisteidesi ymmärtäminen",
+  "scoreExplanation": "Pisteesi osoittavat sijaintisi seksuaalisen suuntautumisen spektrillä:",
+  "heterosexualRange": "0-12 pistettä: Pääasiassa heteroseksuaalinen",
+  "mixedRange": "13-24 pistettä: Enimmäkseen heteroseksuaalinen, jonkin verran samaan sukupuoleen kohdistuvaa vetovoimaa",
+  "bisexualRange": "25-36 pistettä: Biseksuaalinen/panseksuaalinen alue",
+  "homosexualRange": "37-48 pistettä: Pääasiassa homoseksuaalinen",
+  "remember": "Muista",
+  "rememberText": "Tämä testi on vain lähtökohta itsereflektiolle. Seksuaalinen suuntautuminen on spektri, ja monien ihmisten vetovoima voi muuttua ajan myötä. Ei ole oikeaa tai väärää tulosta, ja vain sinä voit todella määritellä identiteettisi.",
+  "resourcesTitle": "Resurssit",
+  "resourcesDescription": "Jos etsit tukea tai lisätietoa seksuaalisesta suuntautumisesta ja identiteetistä, nämä organisaatiot voivat auttaa:",
+  "trevorProject": "Trevor-projekti",
+  "trevorDescription": "Kriisi-interventio ja itsemurhien ehkäisy LGBTQ-nuorille.",
+  "pflag": "PFLAG",
+  "pflagDescription": "Tukea LGBTQ+ -ihmisille, heidän perheilleen ja liittolaisille.",
+  "glaad": "GLAAD",
+  "glaadDescription": "Resursseja ja koulutusta LGBTQ-asioista ja edustuksesta."
 }
