--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -26,9 +26,31 @@
   "stillExploring": "Encore en exploration ? C'est normal",
   "commonQuestions": "Questions fréquentes",
   "helpfulResources": "Ressources utiles",
-  "aboutDescription": "Cette évaluation confidentielle de 16 questions est conçue pour vous aider à explorer votre orientation sexuelle. Basée sur des principes psychologiques, elle fournit un cadre pour réfléchir à l'attraction entre personnes de même sexe.",
+  "aboutDescription": "Cette évaluation confidentielle de 16 questions vous aide à explorer votre orientation sexuelle. Basée sur des principes psychologiques, elle fournit un cadre pour réfléchir à l'attraction entre personnes de même sexe.",
   "privacyDescription": "Vos réponses restent totalement privées. Nous ne stockons aucune donnée personnelle ni réponse au quiz.",
   "selfDiscoveryDescription": "Utilisez ce quiz comme point de départ pour une réflexion personnelle, pas comme une étiquette définitive.",
   "spectrumDescription": "Comprenez que la sexualité existe sur un spectre et peut être fluide au fil du temps.",
-  "quizDuration": "Gratuit, anonyme et prend seulement 5 minutes"
+  "quizDuration": "Gratuit, anonyme et prend seulement 5 minutes",
+  "retakeQuiz": "Refaire le quiz",
+  "returnHome": "Retour à l'accueil",
+  "yourResults": "Vos résultats",
+  "score": "Score",
+  "outOf": "sur",
+  "points": "points",
+  "understandingResults": "Comprendre votre score",
+  "scoreExplanation": "Votre score indique où vous vous situez sur le spectre de l'orientation sexuelle :",
+  "heterosexualRange": "0-12 points : Principalement hétérosexuel",
+  "mixedRange": "13-24 points : Majoritairement hétérosexuel avec une attirance pour le même sexe",
+  "bisexualRange": "25-36 points : Gamme bisexuelle/pansexuelle",
+  "homosexualRange": "37-48 points : Principalement homosexuel",
+  "remember": "Rappel",
+  "rememberText": "Ce quiz n'est qu'un point de départ pour l'auto-réflexion. L'orientation sexuelle existe sur un spectre, et les attirances de nombreuses personnes peuvent être fluides au fil du temps. Il n'y a pas de bon ou mauvais résultat, et vous seul pouvez véritablement définir votre identité.",
+  "resourcesTitle": "Ressources",
+  "resourcesDescription": "Si vous cherchez du soutien ou plus d'informations sur l'orientation sexuelle et l'identité, ces organisations peuvent vous aider :",
+  "trevorProject": "The Trevor Project",
+  "trevorDescription": "Intervention de crise et prévention du suicide pour les jeunes LGBTQ.",
+  "pflag": "PFLAG",
+  "pflagDescription": "Soutien pour les personnes LGBTQ+, leurs familles et leurs alliés.",
+  "glaad": "GLAAD",
+  "glaadDescription": "Ressources et éducation sur les questions et la représentation LGBTQ."
 }
