--- a/locales/it/translation.json
+++ b/locales/it/translation.json
@@ -26,9 +26,31 @@
   "stillExploring": "Ancora in esplorazione? Va bene così",
   "commonQuestions": "Domande comuni",
   "helpfulResources": "Risorse utili",
-  "aboutDescription": "Questa valutazione confidenziale di 16 domande è progettata per aiutarti a esplorare il tuo orientamento sessuale. Basata su principi psicologici, fornisce un quadro per riflettere sull'attrazione verso lo stesso sesso.",
+  "aboutDescription": "Questa valutazione confidenziale di 16 domande ti aiuta a esplorare il tuo orientamento sessuale. Basata su principi psicologici, fornisce un quadro per riflettere sull'attrazione verso lo stesso sesso.",
   "privacyDescription": "Le tue risposte rimangono completamente private. Non memorizziamo alcun dato personale o risposta al quiz.",
   "selfDiscoveryDescription": "Usa questo quiz come punto di partenza per la riflessione personale, non come un'etichetta definitiva.",
   "spectrumDescription": "Comprendi che la sessualità esiste su uno spettro e può essere fluida nel tempo.",
-  "quizDuration": "Gratuito, anonimo e richiede solo 5 minuti"
+  "quizDuration": "Gratuito, anonimo e richiede solo 5 minuti",
+  "retakeQuiz": "Rifai il quiz",
+  "returnHome": "Torna alla home",
+  "yourResults": "I tuoi risultati",
+  "score": "Punteggio",
+  "outOf": "su",
+  "points": "punti",
+  "understandingResults": "Comprendere il tuo punteggio",
+  "scoreExplanation": "Il tuo punteggio indica dove ti collochi nello spettro dell'orientamento sessuale:",
+  "heterosexualRange": "0-12 punti: Prevalentemente eterosessuale",
+  "mixedRange": "13-24 punti: Principalmente eterosessuale con qualche attrazione verso lo stesso sesso",
+  "bisexualRange": "25-36 punti: Range bisessuale/pansessuale",
+  "homosexualRange": "37-48 punti: Prevalentemente omosessuale",
+  "remember": "Ricorda",
+  "rememberText": "Questo quiz è solo un punto di partenza per l'autoriflessione. L'orientamento sessuale esiste su uno spettro, e le attrazioni di molte persone possono essere fluide nel tempo. Non ci sono risultati giusti o sbagliati, e solo tu puoi veramente definire la tua identità.",
+  "resourcesTitle": "Risorse",
+  "resourcesDescription": "Se stai cercando supporto o maggiori informazioni sull'orientamento sessuale e l'identità, queste organizzazioni possono aiutare:",
+  "trevorProject": "The Trevor Project",
+  "trevorDescription": "Intervento di crisi e prevenzione del suicidio per giovani LGBTQ.",
+  "pflag": "PFLAG",
+  "pflagDescription": "Supporto per persone LGBTQ+, le loro famiglie e alleati.",
+  "glaad": "GLAAD",
+  "glaadDescription": "Risorse ed educazione su questioni e rappresentazione LGBTQ."
 }
