--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -30,5 +30,27 @@
   "privacyDescription": "回答は完全に非公開です。個人データやテスト回答は一切保存しません。",
   "selfDiscoveryDescription": "このテストは自己反省の出発点として使用し、確定的なラベル付けとしては使用しないでください。",
   "spectrumDescription": "セクシュアリティはスペクトラム上に存在し、時間とともに変化する可能性があることを理解しましょう。",
-  "quizDuration": "無料、匿名で5分程度で完了"
+  "quizDuration": "無料、匿名で5分程度で完了",
+  "retakeQuiz": "もう一度テストを受ける",
+  "returnHome": "ホームに戻る",
+  "yourResults": "あなたの結果",
+  "score": "スコア",
+  "outOf": "中",
+  "points": "点",
+  "understandingResults": "スコアの理解",
+  "scoreExplanation": "あなたのスコアは性的指向のスペクトラム上での位置を示しています：",
+  "heterosexualRange": "0-12点：主に異性愛",
+  "mixedRange": "13-24点：主に異性愛だが同性への魅力もある",
+  "bisexualRange": "25-36点：両性愛/全性愛の範囲",
+  "homosexualRange": "37-48点：主に同性愛",
+  "remember": "覚えておいてください",
+  "rememberText": "このテストは自己反省の出発点に過ぎません。性的指向はスペクトラム上に存在し、多くの人の魅力は時間とともに流動的になる可能性があります。正解も不正解もなく、自分のアイデンティティを定義できるのはあなただけです。",
+  "resourcesTitle": "リソース",
+  "resourcesDescription": "性的指向やアイデンティティについてのサポートや詳しい情報が必要な場合、以下の組織が支援を提供しています：",
+  "trevorProject": "トレバープロジェクト",
+  "trevorDescription": "LGBTQの若者向けの危機介入と自殺防止。",
+  "pflag": "PFLAG",
+  "pflagDescription": "LGBTQ+の人々、その家族、支援者向けのサポート。",
+  "glaad": "GLAAD",
+  "glaadDescription": "LGBTQの問題と代表性に関するリソースと教育。"
 }
