--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -26,9 +26,31 @@
   "stillExploring": "Ainda explorando? Tudo bem",
   "commonQuestions": "Perguntas comuns",
   "helpfulResources": "Recursos úteis",
-  "aboutDescription": "Esta avaliação confidencial de 16 questões foi projetada para ajudar você a explorar sua orientação sexual. Baseada em princípios psicológicos, fornece um framework para refletir sobre atração pelo mesmo sexo.",
+  "aboutDescription": "Esta avaliação confidencial de 16 questões ajuda você a explorar sua orientação sexual. Baseada em princípios psicológicos, fornece um framework para refletir sobre atração pelo mesmo sexo.",
   "privacyDescription": "Suas respostas permanecem completamente privadas. Não armazenamos nenhum dado pessoal ou respostas do teste.",
   "selfDiscoveryDescription": "Use este teste como ponto de partida para reflexão pessoal, não como um rótulo definitivo.",
   "spectrumDescription": "Entenda que a sexualidade existe em um espectro e pode ser fluida ao longo do tempo.",
-  "quizDuration": "Gratuito, anônimo e leva apenas 5 minutos"
+  "quizDuration": "Gratuito, anônimo e leva apenas 5 minutos",
+  "retakeQuiz": "Refazer o teste",
+  "returnHome": "Voltar ao início",
+  "yourResults": "Seus resultados",
+  "score": "Pontuação",
+  "outOf": "de",
+  "points": "pontos",
+  "understandingResults": "Entendendo sua pontuação",
+  "scoreExplanation": "Sua pontuação indica onde você se encontra no espectro de orientação sexual:",
+  "heterosexualRange": "0-12 pontos: Predominantemente heterossexual",
+  "mixedRange": "13-24 pontos: Majoritariamente heterossexual com alguma atração pelo mesmo sexo",
+  "bisexualRange": "25-36 pontos: Faixa bissexual/pansexual",
+  "homosexualRange": "37-48 pontos: Predominantemente homossexual",
+  "remember": "Lembre-se",
+  "rememberText": "Este teste é apenas um ponto de partida para autorreflexão. A orientação sexual existe em um espectro, e as atrações de muitas pessoas podem ser fluidas ao longo do tempo. Não há resultados certos ou errados, e apenas você pode verdadeiramente definir sua identidade.",
+  "resourcesTitle": "Recursos",
+  "resourcesDescription": "Se você está procurando apoio ou mais informações sobre orientação sexual e identidade, estas organizações podem ajudar:",
+  "trevorProject": "The Trevor Project",
+  "trevorDescription": "Intervenção em crises e prevenção ao suicídio para jovens LGBTQ.",
+  "pflag": "PFLAG",
+  "pflagDescription": "Apoio para pessoas LGBTQ+, suas famílias e aliados.",
+  "glaad": "GLAAD",
+  "glaadDescription": "Recursos e educação sobre questões e representação LGBTQ."
 }
