--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -26,9 +26,31 @@
   "stillExploring": "Всё еще исследуете? Это нормально",
   "commonQuestions": "Частые вопросы",
   "helpfulResources": "Полезные ресурсы",
-  "aboutDescription": "Этот конфиденциальный тест из 16 вопросов разработан, чтобы помочь вам исследовать вашу сексуальную ориентацию. Основанный на психологических принципах, он предоставляет структуру для размышлений о однополом влечении.",
+  "aboutDescription": "Этот конфиденциальный тест из 16 вопросов помогает исследовать вашу сексуальную ориентацию. Основанный на психологических принципах, он предоставляет структуру для размышлений о однополом влечении.",
   "privacyDescription": "Ваши ответы остаются полностью конфиденциальными. Мы не храним никаких личных данных или ответов на тест.",
   "selfDiscoveryDescription": "Используйте этот тест как отправную точку для самоанализа, а не как окончательный ярлык.",
   "spectrumDescription": "Поймите, что сексуальность существует в спектре и может быть подвижной со временем.",
-  "quizDuration": "Бесплатно, анонимно и занимает всего 5 минут"
+  "quizDuration": "Бесплатно, анонимно и занимает всего 5 минут",
+  "retakeQuiz": "Пройти тест снова",
+  "returnHome": "Вернуться на главную",
+  "yourResults": "Ваши результаты",
+  "score": "Баллы",
+  "outOf": "из",
+  "points": "баллов",
+  "understandingResults": "Понимание ваших баллов",
+  "scoreExplanation": "Ваши баллы указывают на ваше положение в спектре сексуальной ориентации:",
+  "heterosexualRange": "0-12 баллов: Преимущественно гетеросексуальный",
+  "mixedRange": "13-24 балла: В основном гетеросексуальный с некоторым влечением к своему полу",
+  "bisexualRange": "25-36 баллов: Бисексуальный/пансексуальный диапазон",
+  "homosexualRange": "37-48 баллов: Преимущественно гомосексуальный",
+  "remember": "Помните",
+  "rememberText": "Этот тест – лишь отправная точка для самоанализа. Сексуальная ориентация существует в спектре, и влечение многих людей может быть подвижным со временем. Нет правильных или неправильных результатов, и только вы можете по-настоящему определить свою идентичность.",
+  "resourcesTitle": "Ресурсы",
+  "resourcesDescription": "Если вы ищете поддержку или больше информации о сексуальной ориентации и идентичности, эти организации могут помочь:",
+  "trevorProject": "Проект Тревор",
+  "trevorDescription": "Кризисное вмешательство и предотвращение самоубийств для ЛГБТК молодежи.",
+  "pflag": "PFLAG",
+  "pflagDescription": "Поддержка для ЛГБТК+ людей, их семей и союзников.",
+  "glaad": "GLAAD",
+  "glaadDescription": "Ресурсы и образование по вопросам ЛГБТК и репрезентации."
 }
