--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -26,9 +26,31 @@
   "stillExploring": "仍在探索？没关系",
   "commonQuestions": "常见问题",
   "helpfulResources": "有用资源",
-  "aboutDescription": "这个保密的16题测试旨在帮助你探索自己的性取向。基于心理学原理，为你提供一个框架来反思同性吸引力，了解你在性取向光谱上的位置。",
+  "aboutDescription": "这个保密的16题测试帮助你探索自己的性取向。基于心理学原理，为你提供一个框架来反思同性吸引力。",
   "privacyDescription": "你的答案完全保密。我们不存储任何个人数据或测试回答。",
   "selfDiscoveryDescription": "把这个测试作为个人反思的起点，而不是一个确定的标签。",
   "spectrumDescription": "了解性取向存在于一个光谱中，并且可能随时间而变化。",
-  "quizDuration": "免费、匿名，只需5分钟"
+  "quizDuration": "免费、匿名，只需5分钟",
+  "retakeQuiz": "重新测试",
+  "returnHome": "返回首页",
+  "yourResults": "你的结果",
+  "score": "得分",
+  "outOf": "满分",
+  "points": "分",
+  "understandingResults": "理解你的得分",
+  "scoreExplanation": "你的得分表明你在性取向光谱上的位置：",
+  "heterosexualRange": "0-12分：主要异性恋倾向",
+  "mixedRange": "13-24分：主要异性恋但有同性吸引",
+  "bisexualRange": "25-36分：双性恋/泛性恋范围",
+  "homosexualRange": "37-48分：主要同性恋倾向",
+  "remember": "请记住",
+  "rememberText": "这个测试只是自我反思的起点。性取向存在于一个光谱中，很多人的吸引可能随时间而变化。没有对错之分，只有你自己能真正定义你的身份。",
+  "resourcesTitle": "相关资源",
+  "resourcesDescription": "如果你需要支持或想了解更多关于性取向和身份认同的信息，这些组织可以帮助你：",
+  "trevorProject": "特雷弗项目",
+  "trevorDescription": "为LGBTQ青年提供危机干预和自杀预防。",
+  "pflag": "PFLAG组织",
+  "pflagDescription": "为LGBTQ+人群、其家人和盟友提供支持。",
+  "glaad": "GLAAD机构",
+  "glaadDescription": "提供LGBTQ议题和代表性的资源和教育。"
 }
