--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -30,5 +30,27 @@
   "privacyDescription": "답변은 완전히 비공개로 유지됩니다. 개인정보나 테스트 응답을 저장하지 않습니다.",
   "selfDiscoveryDescription": "이 테스트를 자기성찰의 시작점으로 사용하세요, 확정적인 라벨로 사용하지 마세요.",
   "spectrumDescription": "성적 지향은 스펙트럼 상에 존재하며 시간이 지남에 따라 유동적일 수 있음을 이해하세요.",
-  "quizDuration": "무료, 익명으로 5분이면 완료"
+  "quizDuration": "무료, 익명으로 5분이면 완료",
+  "retakeQuiz": "테스트 다시 하기",
+  "returnHome": "홈으로 돌아가기",
+  "yourResults": "당신의 결과",
+  "score": "점수",
+  "outOf": "중",
+  "points": "점",
+  "understandingResults": "점수 이해하기",
+  "scoreExplanation": "당신의 점수는 성적 지향 스펙트럼에서의 위치를 나타냅니다:",
+  "heterosexualRange": "0-12점: 주로 이성애자",
+  "mixedRange": "13-24점: 대체로 이성애자이나 동성에 대한 끌림도 있음",
+  "bisexualRange": "25-36점: 양성애자/범성애자 범위",
+  "homosexualRange": "37-48점: 주로 동성애자",
+  "remember": "기억하세요",
+  "rememberText": "이 테스트는 자기성찰의 시작점일 뿐입니다. 성적 지향은 스펙트럼 상에 존재하며, 많은 사람들의 끌림은 시간이 지남에 따라 유동적일 수 있습니다. 옳고 그른 결과는 없으며, 오직 당신만이 자신의 정체성을 진정으로 정의할 수 있습니다.",
+  "resourcesTitle": "관련 자료",
+  "resourcesDescription": "성적 지향과 정체성에 대한 지원이나 더 많은 정보가 필요하시다면, 다음 기관들이 도움을 드릴 수 있습니다:",
+  "trevorProject": "트레버 프로젝트",
+  "trevorDescription": "LGBTQ 청소년을 위한 위기 개입 및 자살 예방.",
+  "pflag": "PFLAG",
+  "pflagDescription": "LGBTQ+ 사람들, 그들의 가족, 동맹자들을 위한 지원.",
+  "glaad": "GLAAD",
+  "glaadDescription": "LGBTQ 이슈와 대표성에 대한 자료와 교육."
 }
